--- a/enroll.html
+++ b/enroll.html
@@ -225,6 +225,18 @@
   
           
   </style>
+
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BEHT45MNZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BEHT45MNZ2');
+</script>
  </head>
  
  
