--- a/index.html
+++ b/index.html
@@ -240,6 +240,17 @@ margin:0 20px;
 
 
      </style>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BEHT45MNZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BEHT45MNZ2');
+</script>
 </Head>
 
 
