--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 text-align: center;
 font-family: 'Roboto', sans-serif;
-background: #1c2135;
+background: linear-gradient(to right, #a8c0ff, #3f2b96);
 }
 .services h1{
 display: inline-block;
@@ -455,8 +455,19 @@ margin:0 20px;
 <br>
 <center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/instagram.png" alt="whatsapp" style="width:180px"></a></center>
 
+<br><br>
 
 
+
+<div class="footer" style="width:100%;  background: linear-gradient(to right, #fc354c, #0abfbc); height:130px;">
+    <footer>
+        <br>
+         <center><img src="assets/logo 2.png" width="140px"></center>
+    </footer>
+</div>
+<div style="width:100%; height:4px; background:orange;"></div>
+<div style="width:100%; height:4px; background:blue;"></div>
+<div style="width:100%; height:4px; background:green;"></div>
 
 
 
