--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 text-align: center;
 font-family: 'Roboto', sans-serif;
-background: linear-gradient(to right, #a8c0ff, #3f2b96);
+background: #1c2135;
 }
 .services h1{
 display: inline-block;
