--- a/enroll.html
+++ b/enroll.html
@@ -340,5 +340,20 @@
 </div>	
 </form>
 </div>
+
+
+
+
+<div class="footer" style="width:100%;  background: linear-gradient(to right, #fc354c, #0abfbc); height:130px;">
+  <footer>
+      <br>
+       <center><img src="assets/logo 2.png" width="140px"></center>
+       
+  </footer>
+</div>
+<div style="width:100%; height:4px; background:orange;"></div>
+<div style="width:100%; height:4px; background:blue;"></div>
+<div style="width:100%; height:4px; background:green;"></div>
+
  </body>
  </html>
