--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
      <style>
            *{margin:0; padding:0; list-style:none; text-decoration:none; font-family: sans-serif; box-sizing: border-box;}
                                             /*Navigation Bar*/
-           nav{height:50px; background:	#FAF9F6;}
+           nav{height:50px; background:white;}
            nav img{width:160px; position:absolute; top:3px; left:2%;}
-           nav ul{float:right; margin-right:25px;}
-           nav ul li{display:inline-block; line-height: 55px; margin:0 15px;}
-           nav ul li a{position:relative; color:black; font-size:20px; padding:5px 0; font-weight:bold;}
+           nav ul{float:right; margin-right:5px;}
+           nav ul li{display:inline-block; line-height: 45px; margin:0 15px;}
+           nav ul li a{position:relative; color:black; font-size:15px; padding:5px 0; font-weight:bold; font-family: 'Rubik Distressed', cursive;}
            ul li a.active,
            ul li a:hover{text-decoration:underline; }
            label #btn,
@@ -42,7 +42,7 @@
                                     /*Sticky Button*/
            .stickybtn-container .btn-float .btn{text-decoration: none; font-size: 2rem; font-weight: bold; letter-spacing: 2px; background-color: #29434e; padding: 5px 10px; border-radius: 20px; color: #fff; position: fixed; right: 15px; bottom: 40px; transition: all 0.3s ease 0s; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3); z-index: 99;}
                                     /*First Div*/
-           .firstdiv{ background-image: linear-gradient(rgba(9,5, 54,0.3), rgba(5,4,46,0.7)), url("assets/stockimg.gif "); width:100%; height:108vh; background-size:cover; color:white;}
+           .firstdiv{background-image: linear-gradient(rgba(9,5, 54,0.3), rgba(5,4,46,0.7)), url("assets/stockimg.gif "); width:100%; height:108vh; background-size:cover; color:white;}
            .course-container{width:80%; display:block; margin:auto; padding-top:100px;}
            .content-section{float:left; width:55%; margin-top:30px;}
            .image-section{float:right; width:40%;}
@@ -268,8 +268,9 @@ margin:0 20px;
            <img src="assets/logo 2.png" alt="logo">
            <ul>
            <li><a href="#">Home</a></li>
-           <li><a href="enroll.html">Enroll</a></li>
-
+           <li><a href="enroll.html">Courses</a></li>
+           <li><a href="enroll.html">MoneyBlogs</a></li>
+           <li><a href="enroll.html">About</a></li>
            <li><a href="contact.html">Contact</a></li>
            </ul>
        </nav> 
@@ -299,7 +300,7 @@ margin:0 20px;
 
  <div class="firstdiv1">
     <div class="firstdiv2">
-                   <h1>Invest Like A Pro.</h1>
+                   <h1 style="font-family: 'Syne Mono', monospace;">Invest Like A Pro.</h1>
                    <p>Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
