--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ margin:0 20px;
 
  <div class="firstdiv1">
     <div class="firstdiv2">
-                   <h2 style="font-family: 'Syne Mono', monospace;">Invest Like A Pro.</h2>
+                   <h2 style="font-family: 'Syne Mono', monospace;">Invest Like A Pro.&#128222;</h2>
                    <p>Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
