--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ margin:0 20px;
            <label for="check">
            <i class="fas fa-bars" id="btn"></i>
            <i class="fas fa-times" id="cancel"></i>
-           <i class="fas fa-search" id="search" style="color:black"></i>
+           <i class="fas fa-earch" id="search" style="color:black">&#128222;</i>
            
            </label>
            <img src="assets/logo 2.png" alt="logo">
@@ -300,7 +300,7 @@ margin:0 20px;
 
  <div class="firstdiv1">
     <div class="firstdiv2">
-                   <h2 style="font-family: 'Syne Mono', monospace;">Invest Like A Pro.&#128222;</h2>
+                   <h2 style="font-family: 'Syne Mono', monospace;">Invest Like A Pro.</h2>
                    <p>Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
