--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
            ul li a.active,
            ul li a:hover{text-decoration:underline; }
            label #btn,
-           label #cancel{color:black; font-size:20px; float:left; line-height:80px; margin-left:20px; cursor:pointer; margin-top:-14px; display:none;}
-           label #search{line-height:80px; font-size: 26px; margin-right:20px; margin-top:-10px; float:right;}
+           label #cancel{color:black; font-size:26px; float:left; line-height:80px; margin-left:20px; cursor:pointer; margin-top:-14px; display:none;}
+           label #search{line-height:80px; font-size: 26px; margin-right:20px; margin-top:-14px; float:right;}
            #check{display:none;}
-           #search{float:right; margin-left:130px; color:black;}
+           #search{float:right; margin-left:140px; color:black;}
            @media (max-width:1118px){
                                      nav img{left:8%;}
            }
@@ -262,7 +262,7 @@ margin:0 20px;
            <label for="check">
            <i class="fas fa-bars" id="btn"></i>
            <i class="fas fa-times" id="cancel"></i>
-           <i class="fas fa-earch" id="search" style="color:black">&#128222;</i>
+           <i class="fas fa-search" id="search" style="color:black"></i>
            
            </label>
            <img src="assets/logo 2.png" alt="logo">
