--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            }
            @media (max-width:860px){
                                    label #btn{display:block;}
-                                   ul{position:fixed; width:100%; height:100vh; background:grey; top:60px; left:-100%; transition: all .5s; text-align:center;}
+                                   ul{position:fixed; width:100%; height:100vh; background:white; top:60px; left:-100%; transition: all .5s; text-align:center;}
                                    nav ul li{display:block; margin:20px 0; line-height:30px;}
                                    nav ul li a{font-size:20px; color:white;}
                                    #check:checked ~ ul{left:0%;}
@@ -69,7 +69,7 @@
 
           
 
-.firstdiv1{background-image: linear-gradient(rgba(9,5, 54,0.3), rgba(5,4,46,0.7)), url("assets/stockimg.gif "); position:fixed; width:100%; height:90vh; background-size:cover;}                       
+.firstdiv1{background-image: linear-gradient(rgba(9,5, 54,0.3), rgba(5,4,46,0.7)), url("assets/stockimg.gif ");  width:100%; height:90vh; background-size:cover;}                       
 
 .firstdiv2{width:90%; color:#fff; position:absolute; top:50%; left:50%; transform: translate(-50%,-50%); text-align:center;}
 .firstdiv2 h1{font-size:62px;}
