--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
            }
            @media (max-width:860px){
                                    label #btn{display:block;}
-                                   ul{position:fixed; width:100%; height:100vh; background:white; top:60px; left:-100%; transition: all .5s; text-align:center;}
+                                   ul{position:fixed; width:100%; height:100vh; background:whitegi; top:60px; left:-100%; transition: all .5s; text-align:center;}
                                    nav ul li{display:block; margin:20px 0; line-height:30px;}
-                                   nav ul li a{font-size:20px; color:white;}
+                                   nav ul li a{font-size:20px; color:black;}
                                    #check:checked ~ ul{left:0%;}
                                    #check:checked ~ label #btn{display:none;}
                                    #check:checked ~ label #cancel{display:block;}
