--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                    label #btn{display:block;}
                                    ul{position:fixed; width:100%; height:100vh; background:white; top:60px; left:-100%; transition: all .5s; text-align:center;}
                                    nav ul li{display:block; margin:20px 0; line-height:30px;}
-                                   nav ul li a{font-size:25px; color:black; font-family: 'Syne Mono', monospace;}
+                                   nav ul li a{font-size:20px;}
                                    #check:checked ~ ul{left:0%;}
                                    #check:checked ~ label #btn{display:none;}
                                    #check:checked ~ label #cancel{display:block;}
