--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
            .image-section{float:right; width:40%;}
            .image-section img{width:100%; height:auto;}
            .content-section .title{text-transform:uppercase; font-size:28px;}
-           .content-section .content h3{margin-top:20px; color:#5d5d5d; font-size:21px;}
+           .content-section .content h2{margin-top:20px; color:#5d5d5d; font-size:26px;}
            .content-section .content p{margin-top:10px; font-family:sans-serif; font-size:18px; line-height:1.5;}
            .content-section .content .button{margin-top:30px;}
            .content-section .content .button a{background-color:#3d3d3d; padding:12px 40px; text-decoration:none; color:#fff; font-size:25px; letter-spacing:1.5px;}
@@ -300,7 +300,7 @@ margin:0 20px;
 
  <div class="firstdiv1">
     <div class="firstdiv2">
-                   <h2 style="font-family: 'Syne Mono', monospace;">Invest Like A Pro.</h2>
+                   <h2 style="font-family: 'Syne Mono', monospace; font-size:30px;">Invest Like A Pro.</h2>
                    <p>Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
