--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ margin:0 20px;
  <div class="firstdiv1">
     <div class="firstdiv2">
                    <h2 style="font-family: 'Syne Mono', monospace; font-size:30px;">Invest Like A Pro.</h2>
-                   <p>Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
+                   <p style="font-family: 'Quicksand', sans-serif;">Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
                    </p>
