--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            nav img{width:160px; position:absolute; top:3px; left:2%;}
            nav ul{float:right; margin-right:5px;}
            nav ul li{display:inline-block; line-height: 45px; margin:0 15px;}
-           nav ul li a{position:relative; color:black; font-size:20px; padding:5px 0; font-weight:bold; font-family: 'Rubik Distressed', cursive;}
+           nav ul li a{position:relative; color:black; font-size:20px;  padding:5px 0; font-weight:bold; font-family: 'Rajdhani', sans-serif;s cursive;}
            nav ul li a.active,
            nav ul li a:hover{color:#fc354c;}
            label #btn,
