--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ margin:0 20px;
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
                    </p>
-                   <a href="#" class="hero-btn" style="font-family: 'Syne Mono', monospace">Enroll Now</a>
+                   <a href="#" class="hero-btn" style="font-family: 'Syne Mono', monospace">Enroll Now.</a>
     </div>
 </div>
 
