--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            }
            @media (max-width:860px){
                                    label #btn{display:block;}
-                                   ul{position:fixed; width:100%; height:100vh; background:white; top:60px; left:-100%; transition: all .5s; text-align:center;}
+                                   ul{position:fixed; width:100%; height:100vh; background:black; top:60px; left:-100%; transition: all .5s; text-align:center;}
                                    nav ul li{display:block; margin:20px 0;  line-height:40px;}
                                    nav ul li a{font-size:25px; font-family: 'Syne Mono', monospace; margin-top: 70px;}
                                    #check:checked ~ ul{left:0%;}
