--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ margin:0 20px;
 
 
 <div class="services">
-    <h1>Our Speciality</h1>
+    <h1 style="font-family: 'Syne Mono', monospace">Our Speciality</h1>
     <br><br>
 
     <div class="wrapper">
