--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ margin:0 20px;
         <h2><span class="material-symbols-outlined" style="font-size:40px">
           trending_up
           </span></h2>
-        <h2>Intraday</h2>
+        <h2 style="font-family: 'Syne Mono', monospace">Intraday</h2>
         <p>Buying and selling have to occur within one trading session on the same day.</p>
       </div>
 
@@ -349,7 +349,7 @@ margin:0 20px;
         <span class="material-symbols-outlined" style="font-size:40px; color:white;">
           candlestick_chart
           </span>
-        <h2>Future & Option</h2>
+        <h2 style="font-family: 'Syne Mono', monospace">Future & Option</h2>
         <p>Invest in Future and option with the help of our experience.</p>
       </div>
 
@@ -357,7 +357,7 @@ margin:0 20px;
         <span class="material-symbols-outlined" style="font-size:40px; color:white;">
           query_stats
           </span>
-        <h2>Positional Trading</h2>
+        <h2 style="font-family: 'Syne Mono', monospace">Positional Trading</h2>
         <p>Positional trading is an upscale version of intraday trading.</p>
       </div>
 
@@ -365,7 +365,7 @@ margin:0 20px;
         <span class="material-symbols-outlined" style="font-size:40px; color:white;">
           analytics
           </span>
-        <h2>Technical Analysis</h2>
+        <h2 style="font-family: 'Syne Mono', monospace">Technical Analysis</h2>
         <p>We are expert in the Technical Analysis.We Want to make you Too.</p>
       </div>
 
@@ -373,7 +373,7 @@ margin:0 20px;
         <span class="material-symbols-outlined"  style="font-size:40px; color:white;">
           monitoring
           </span>
-        <h2>Trading Plan & Setup</h2>
+        <h2 style="font-family: 'Syne Mono', monospace">Trading Plan & Setup</h2>
         <p>We will help you to make Trading Plan and Setup To make you sucessed.</p>
       </div>
 
@@ -381,7 +381,7 @@ margin:0 20px;
         <span class="material-symbols-outlined" style="font-size:40px; color:white;">
           campaign
           </span>
-        <h2>IPO Investing</h2>
+        <h2 style="font-family: 'Syne Mono', monospace">IPO Investing</h2>
         <p>Investing in the new companies to  make your money extra.</p>
       </div>
     </div>
