--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ margin:0 20px;
           trending_up
           </span></h2>
         <h2 style="font-family: 'Syne Mono', monospace">Intraday</h2>
-        <p>Buying and selling have to occur within one trading session on the same day.</p>
+        <p style="font-family: 'Syne Mono', monospace">Buying and selling have to occur within one trading session on the same day.</p>
       </div>
 
       <div class="service">
@@ -350,7 +350,7 @@ margin:0 20px;
           candlestick_chart
           </span>
         <h2 style="font-family: 'Syne Mono', monospace">Future & Option</h2>
-        <p>Invest in Future and option with the help of our experience.</p>
+        <p style="font-family: 'Syne Mono', monospace">Invest in Future and option with the help of our experience.</p>
       </div>
 
       <div class="service">
@@ -358,7 +358,7 @@ margin:0 20px;
           query_stats
           </span>
         <h2 style="font-family: 'Syne Mono', monospace">Positional Trading</h2>
-        <p>Positional trading is an upscale version of intraday trading.</p>
+        <p style="font-family: 'Syne Mono', monospace">Positional trading is an upscale version of intraday trading.</p>
       </div>
 
       <div class="service">
@@ -366,7 +366,7 @@ margin:0 20px;
           analytics
           </span>
         <h2 style="font-family: 'Syne Mono', monospace">Technical Analysis</h2>
-        <p>We are expert in the Technical Analysis.We Want to make you Too.</p>
+        <p style="font-family: 'Syne Mono', monospace">We are expert in the Technical Analysis.We Want to make you Too.</p>
       </div>
 
       <div class="service">
@@ -374,7 +374,7 @@ margin:0 20px;
           monitoring
           </span>
         <h2 style="font-family: 'Syne Mono', monospace">Trading Plan & Setup</h2>
-        <p>We will help you to make Trading Plan and Setup To make you sucessed.</p>
+        <p style="font-family: 'Syne Mono', monospace">We will help you to make Trading Plan and Setup To make you sucessed.</p>
       </div>
 
       <div class="service">
@@ -382,7 +382,7 @@ margin:0 20px;
           campaign
           </span>
         <h2 style="font-family: 'Syne Mono', monospace">IPO Investing</h2>
-        <p>Investing in the new companies to  make your money extra.</p>
+        <p style="font-family: 'Syne Mono', monospace">Investing in the new companies to  make your money extra.</p>
       </div>
     </div>
   </div>
