--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 text-align: center;
 font-family: 'Roboto', sans-serif;
 background: #1c2135;
+
 }
 .services h1{
 display: inline-block;
@@ -327,7 +328,8 @@ margin:0 20px;
 
 
 <div class="services">
-    <h1 style="font-family: 'Syne Mono', monospace">Our Speciality</h1>
+  <br><br>
+    <h1 style="font-family: 'Syne Mono', monospace;">Our Speciality</h1>
     <br><br>
 
     <div class="wrapper">
@@ -385,6 +387,8 @@ margin:0 20px;
         <p style="font-family: 'Syne Mono', monospace">Investing in the new companies to  make your money extra.</p>
       </div>
     </div>
+    <br><br>
+    <h1></h1>
   </div>
 <br><br>
 
