--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@ margin:0 20px;
         <h2 style="font-family: 'Syne Mono', monospace">IPO Investing</h2>
         <p style="font-family: 'Syne Mono', monospace">Investing in the new companies to  make your money extra.</p>
       </div>
+         <marquee direction="right"><img src="assets/piggy.gif" width="250px"></marquee>
     </div>
     <br>
     <h1></h1>
