--- a/index.html
+++ b/index.html
@@ -301,12 +301,14 @@ margin:0 20px;
 
  <div class="firstdiv1">
     <div class="firstdiv2">
+    
                    <h2 style="font-family: 'Syne Mono', monospace; font-size:30px; margin-top:6px;">Invest Like A Pro.</h2>
                    <p style="font-family: 'Rajdhani', sans-serif; overflow: hidden;">Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
                    </p>
                    <a href="#" class="hero-btn" style="font-family: 'Syne Mono', monospace">Enroll Now.</a>
+
     </div>
 </div>
 
@@ -386,10 +388,11 @@ margin:0 20px;
         <h2 style="font-family: 'Syne Mono', monospace">IPO Investing</h2>
         <p style="font-family: 'Syne Mono', monospace">Investing in the new companies to  make your money extra.</p>
       </div>
-         <marquee direction="right"><img src="assets/piggy.gif" width="250px"></marquee>
+
+      <br><br><br>
+         <marquee direction="right" scrollamount="10"><img src="assets/piggy.gif" width="220px"></marquee>
     </div>
-    <br>
-    <h1></h1>
+   
   </div>
 <br><br>
 
