--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ margin:0 20px;
 
 <div class="services">
   <br><br>
-    <h1 style="font-family: 'Syne Mono', monospace;">Our Speciality</h1>
+    <h1 style="font-family: 'Syne Mono', monospace;"><i class="fa-regular fa-circle-dot"></i>    Our Speciality    <i class="fa-regular fa-circle-dot"></i></h1>
     <br><br>
 
     <div class="wrapper">
