--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ margin:0 20px;
   </div>
   
   <br><br><br>
-   <center><h1>200+ Happy Traders</h1></center>
+   <center><h1 style="font-family: 'Syne Mono', monospace">200+ Happy Traders</h1></center>
    <br>
   <div class="tcontainer">
      
