--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                                    #check:checked ~ label #btn{display:none;}
                                    #check:checked ~ label #cancel{display:block;}
            }
-                                    /*Sticky Button*/
+                                             /*Sticky Button*/
            .stickybtn-container .btn-float .btn{text-decoration: none; font-size: 2rem; font-weight: bold; letter-spacing: 2px; background-color: #29434e; padding: 5px 10px; border-radius: 20px; color: #fff; position: fixed; right: 15px; bottom: 40px; transition: all 0.3s ease 0s; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3); z-index: 99;}
-                                    /*First Div*/
+                                             /*First Div*/
            .firstdiv{background-image: linear-gradient(rgba(9,5, 54,0.3), rgba(5,4,46,0.7)), url("assets/stockimg.gif "); width:100%; height:108vh; background-size:cover; color:white;}
            .course-container{width:80%; display:block; margin:auto; padding-top:100px;}
            .content-section{float:left; width:55%; margin-top:30px;}
@@ -66,50 +66,15 @@
                                                .content-section .content .button a{padding:9px 30px;}
                                                .content-section .social{text-align:center;}
            }
-
-
-          
-
-.firstdiv1{background-image: linear-gradient(rgba(9,5, 54,0.3), rgba(5,4,46,0.7)), url("assets/stockimg.gif ");  width:100%; height:90vh; background-size:cover;}                       
-
-.firstdiv2{width:90%; color:#fff; position:absolute; top:50%; left:50%; transform: translate(-50%,-50%); text-align:center;}
-.firstdiv2 h1{font-size:62px;}
-.firstdiv2 p{margin:10px 0 40px; font-size:17px; color:#fff; }
-.hero-btn{display:inline-block; text-decoration: none; color:#fff; border:1px solid #fff; padding:12px 34px; font-size:16px; background:transparent; position:relative; cursor: pointer;}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.services{
-
-text-align: center;
-font-family: 'Roboto', sans-serif;
-background: #1c2135;
-
-}
-.services h1{
-display: inline-block;
-text-transform: uppercase;
-border-bottom: 4px solid #3498db;
-font-size: 20px;
-padding-bottom: 10px;
-margin-top: 60px;
-color:white;
-}
-.cen{
+           .firstdiv1{background-image: linear-gradient(rgba(9,5, 54,0.3), rgba(5,4,46,0.7)), url("assets/stockimg.gif ");  width:100%; height:90vh; background-size:cover;}                       
+           .firstdiv2{width:90%; color:#fff; position:absolute; top:50%; left:50%; transform: translate(-50%,-50%); text-align:center;}
+           .firstdiv2 h1{font-size:62px;}
+           .firstdiv2 p{margin:10px 0 40px; font-size:17px; color:#fff; }
+           .hero-btn{display:inline-block; text-decoration: none; color:#fff; border:1px solid #fff; padding:12px 34px; font-size:16px; background:transparent; position:relative; cursor: pointer;}
+                                                /*services*/
+           .services{text-align:center; font-family:'Roboto', sans-serif; background:#1c2135;}
+           .services h1{display:inline-block; text-transform:uppercase; border-bottom:4px solid #3498db; font-size:20px; padding-bottom:10px; margin-top:60px; color:white;}
+           .cen{
 max-width: 1200px;
 margin: auto;
 overflow: hidden;
@@ -242,15 +207,7 @@ margin:0 20px;
      </style>
 
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BEHT45MNZ2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-BEHT45MNZ2');
-</script>
 </Head>
 
 
