--- a/index.html
+++ b/index.html
@@ -375,26 +375,26 @@ margin:0 20px;
      
      <img src="assets/profile.png" alt="Avatar" style="width:70px">
     <p style="font-family: 'Syne Mono', monospace"><span>Adnaan Shaikh</span>(Student)</p>
-    <p style="font-family: 'Syne Mono', monospace">Official Big Bull helped me to make money from the Share Market and Mutual Funds.This course is tottaly value for money.</p>
+    <p style="font-family: 'Barlow Condensed', sans-serif;">Official Big Bull helped me to make money from the Share Market and Mutual Funds.This course is tottaly value for money.</p>
   </div>
   <br><br>
   <div class="tcontainer">
     <img src="assets/profile.png" alt="Avatar" style="width:70px">
     <p style="font-family: 'Syne Mono', monospace"><span>Vishal Patil</span>(Stock Trader)</p>
-    <p style="font-family: 'Syne Mono', monospace">I have 5 year of trading experience,But i always wanated to learn deep knowledge of share market. This course helped me a lot to achieving of goals.</p>
+    <p style="font-family: 'Barlow Condensed', sans-serif;">I have 5 year of trading experience,But i always wanated to learn deep knowledge of share market. This course helped me a lot to achieving of goals.</p>
   </div>
   <br><br>
   <div class="tcontainer">
     <img src="assets/profile.png" alt="Avatar" style="width:70px">
     <p style="font-family: 'Syne Mono', monospace"><span>Samir Patel</span>(Student)</p>
-    <p style="font-family: 'Syne Mono', monospace">I always wanted to earn money from the share market for spending money while studying.This course helped me to make huge money from the Share Market.</p>
+    <p style="font-family: 'Barlow Condensed', sans-serif;">I always wanted to earn money from the share market for spending money while studying.This course helped me to make huge money from the Share Market.</p>
   </div>
   
   <br><br>
   <div class="tcontainer">
     <img src="assets/profile.png" alt="Avatar" style="width:70px">
     <p style="font-family: 'Syne Mono', monospace"><span>Ram Pawar</span>(Shop Owner)</p>
-    <p style="font-family: 'Syne Mono', monospace">I am the owner of the Grocery Shop, but i always wanted to earn money apart from the shop. So i purchased this course. Now i can make more money than shop.</p>
+    <p style="font-family: 'Barlow Condensed', sans-serif;">I am the owner of the Grocery Shop, but i always wanted to earn money apart from the shop. So i purchased this course. Now i can make more money than shop.</p>
   </div>
   
   <br><br>
