--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ margin:0 20px;
     border-bottom: 4px solid #3498db;
     font-size: 20px;
     padding-bottom: 10px;
-    margin-top: 40px;   font-family:montserrat,sans-serif"><i class="fa-regular fa-circle-dot"></i>    Connect With Us    <i class="fa-regular fa-circle-dot"></i> </h1></center>
+    margin-top: 40px;    font-family: 'Syne Mono', monospace"><i class="fa-regular fa-circle-dot"></i>    Connect With Us    <i class="fa-regular fa-circle-dot"></i> </h1></center>
 
 </div>
 
