--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ margin:0 20px;
  <div class="firstdiv1">
     <div class="firstdiv2">
     
-                   <h2 style="font-family: 'Syne Mono', monospace; font-size:30px; margin-top:6px;">Invest Like A Pro.</h2>
+                   <h2 style="font-family: 'Syne Mono', monospace; font-size:30px; margin-top:6px;">Invest Like A Hero</h2>
                    <p style="font-family: 'Rajdhani', sans-serif; overflow: hidden;">Pure Price Action-Based Trading, Detailed Technical Analysis, Risk Management Techniques,
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
