--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ margin:0 20px;
 
 
 <br>
-<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/whatsapp.png" alt="whatsapp" style="width:190px"></a></center>
+<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/wa-logo.png" alt="whatsapp" style="width:190px"></a></center>
 
 <br>
 <center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/instagram.png" alt="whatsapp" style="width:180px"></a></center>
