--- a/index.html
+++ b/index.html
@@ -415,10 +415,10 @@ margin:0 20px;
 
 
 <br>
-<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/wa.png" alt="whatsapp-logo" style="width:190px"></a></center>
+<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/ytlogo.png" alt="whatsapp-logo" style="width:190px"></a></center>
 
 <br>
-<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/instagram.png" alt="instagram-logo" style="width:180px"></a></center>
+<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/ytlogo.png" alt="instagram-logo" style="width:180px"></a></center>
 <br>
 <center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:180px"></a></center>
 <br><br>
