--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ margin:0 20px;
 
 
 
-<div class="footer" style="width:100%;  background: linear-gradient(to right, #fc354c, #0abfbc); height:130px;">
+<div class="footer" style="width:100%;  background: linear-gradient(to right, #141e30, #243b55); height:130px;">
     <footer>
         <br>
          <center><img src="assets/logo 2.png" width="140px"></center>
