--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ margin:0 20px;
 <br>
 <center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/instagram.png" alt="instagram-logo" style="width:180px"></a></center>
 <br>
-<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:175px; margin-right:30px; margin-top:10px"></a></center>
+<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:175px; margin-right:10px; margin-top:10px"></a></center>
 <br><br>
 <center><button>Write Us Email</button></center>
 <br><br><br>
@@ -435,7 +435,7 @@ margin:0 20px;
     </footer>
 </div>
 <div style="width:100%; height:4px; background:orange;"></div>
-<div style="width:100%; height:4px; background:blue;"></div>
+<div style="width:100%; height:4px; background:rgb(24, 24, 24);"></div>
 <div style="width:100%; height:4px; background:green;"></div>
 
 
