--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ margin:0 20px;
            <li><a href="#" class="active">Home</a></li>
           
         
-           <li><a href="enroll.html">About</a></li>
+           <li><a href="enroll.html">Enroll</a></li>
            <li><a href="contact.html">Contact</a></li>
            </ul>
        </nav> 
@@ -271,7 +271,7 @@ margin:0 20px;
 
 <div class="stickybtn-container">
                                 <div class="btn-float">
-                                <a href="enroll.html" class="btn">&#128176;Enroll</a>
+                                <a href="enroll.html" class="btn" style="  font-family: 'Syne Mono', monospace">&#128176;Enroll</a>
                                 </div>
 </div>
 
