--- a/index.html
+++ b/index.html
@@ -431,7 +431,8 @@ margin:0 20px;
     <footer>
         <br>
          <center><img src="assets/logo-red.png" width="160px"></center>
-
+        <br><br>
+        <center><h4 style="color:white">	&#169; sahiltrading.com</h4></center>
     </footer>
 </div>
 <div style="width:100%; height:4px; background:orange;"></div>
