--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ margin:0 20px;
     </footer>
 </div>
 <div style="width:100%; height:4px; background:orange;"></div>
-<div style="width:100%; height:4px; background:rgb(24, 24, 24);"></div>
+<div style="width:100%; height:4px; background:blue;"></div>
 <div style="width:100%; height:4px; background:green;"></div>
 
 
