--- a/enroll.html
+++ b/enroll.html
@@ -19,7 +19,7 @@
            nav ul li{display:inline-block; line-height: 55px; margin:0 15px;}
            nav ul li a{position:relative; color:black; font-size:20px; padding:5px 0; font-weight:bold;}
            ul li a.active,
-           ul li a:hover{text-decoration:underline; }
+           ul li a:hover{color:#fc354c; }
            label #btn,
            label #cancel{color:black; font-size:26px; float:left; line-height:80px; margin-left:20px; cursor:pointer; margin-top:-10px; display:none;}
            label #search{line-height:80px; font-size: 26px; margin-right:20px; margin-top:-10px; float:right;}
@@ -36,7 +36,7 @@
                                    label #btn{display:block;}
                                    ul{position:fixed; width:100%; height:100vh; background:white; top:60px; left:-100%; transition: all .5s; text-align:center;}
                                    nav ul li{display:block; margin:20px 0; line-height:30px;}
-                                   nav ul li a{font-size:20px;}
+                                   nav ul li a{font-size:25px; font-family: 'Syne Mono', monospace; margin-top: 70px;}
                                    #check:checked ~ ul{left:0%;}
                                    #check:checked ~ label #btn{display:none;}
                                    #check:checked ~ label #cancel{display:block;}
@@ -253,7 +253,7 @@
            <img src="assets/logo 2.png" alt="logo">
            <ul>
            <li><a href="#">Home</a></li>
-           <li><a href="#">Enroll</a></li>
+           <li><a href="#" class="active">Enroll</a></li>
 
            <li><a href="#">Contact</a></li>
            </ul>
