--- a/enroll.html
+++ b/enroll.html
@@ -186,11 +186,12 @@
 
 .wrapper .form .inputfield .btn{
   width: 100%;
-   padding: 8px 10px;
+  padding: 8px 10px;
   font-size: 15px; 
   border: 0px;
   background:  #fec107;
-  color: #fff;
+  color: black;
+  font-size:20px;
   cursor: pointer;
   border-radius: 3px;
   outline: none;
@@ -228,15 +229,7 @@
 
 
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BEHT45MNZ2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-BEHT45MNZ2');
-</script>
  </head>
  
  
@@ -341,19 +334,16 @@
 </form>
 </div>
 
-
-
-
-<div class="footer" style="width:100%;  background: linear-gradient(to right, #fc354c, #0abfbc); height:130px;">
+<div class="footer" style="width:100%;  background: linear-gradient(to right, #141e30, #243b55); height:130px;">
   <footer>
       <br>
-       <center><img src="assets/logo 2.png" width="140px"></center>
-       
+       <center><img src="assets/logo-red.png" width="160px"></center>
+      <br><br>
+      <center><h4 style="color:white">	&#169; sahiltrading.com</h4></center>
   </footer>
 </div>
 <div style="width:100%; height:4px; background:orange;"></div>
 <div style="width:100%; height:4px; background:blue;"></div>
 <div style="width:100%; height:4px; background:green;"></div>
-
  </body>
  </html>
