--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,12 @@
             </ul>
         </nav> 
  </Header> 
-    
+   
+ 
+
+<center>
+ <div class="formdiv" style="width:430px; background:grey; height:400px; margin-top:50px">
+</div>
+</center>
 </body>
 </HTML>
