--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ margin:0 20px;
 <br>
 <center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:175px; margin-right:10px; margin-top:10px"></a></center>
 <br><br>
-<center><button style="width:230px; border-radius:10px;"><h2 style="  font-family: 'Syne Mono', monospace"><i class="fa-regular fa-envelope"></i> Write Us Email</h2></button></center>
+<center><a href="contact.html"><button style="width:230px; border-radius:10px;"><h2 style="  font-family: 'Syne Mono', monospace"><i class="fa-regular fa-envelope"></i> Write Us Email</h2></button></a></center>
 <br><br><br>
 
 
