--- a/enroll.html
+++ b/enroll.html
@@ -264,7 +264,8 @@
     <div class="title">
       Enroll For Course
     </div>
-    <form action="https://formspree.io/f/meqdgbbn" method="POST">
+    <form action="https://formspree.io/f/xvoydene"
+    method="POST">
     <div class="form">
        <div class="inputfield">
           <label>Full Name</label>
@@ -295,7 +296,7 @@
      </div> 
 
         <div class="inputfield">
-          <label>Trading Level</label>
+          <label name="trading-capital">Trading Level</label>
           <div class="custom_select">
             <select name="tradinglevel">
               <option value="">Select</option>
@@ -309,7 +310,7 @@
 
 
        <div class="inputfield">
-        <label>Profession</label>
+        <label name="profession">Profession</label>
         <div class="custom_select">
           <select name="profession">
             <option value="">Select</option>
