--- a/contact.html
+++ b/contact.html
@@ -246,9 +246,9 @@
            <img src="assets/logo 2.png" alt="logo">
            <ul>
            <li><a href="#">Home</a></li>
-           <li><a href="#" class="active">Enroll</a></li>
+           <li><a href="#">Enroll</a></li>
 
-           <li><a href="#">Contact</a></li>
+           <li><a href="#"  class="active">Contact</a></li>
            </ul>
        </nav> 
 </Header> 
