--- a/enroll.html
+++ b/enroll.html
@@ -296,7 +296,7 @@
      </div> 
 
         <div class="inputfield">
-          <label name="trading-capital">Trading Level</label>
+          <label name="trading-level">Trading Level</label>
           <div class="custom_select">
             <select name="tradinglevel">
               <option value="">Select</option>
