--- a/contact.html
+++ b/contact.html
@@ -264,7 +264,8 @@
     <div class="title">
       Contact Us
     </div>
-    <form action="https://formspree.io/f/meqdgbbn" method="POST">
+    <form   action="https://formspree.io/f/mbjbqnvl"
+    method="POST">
     <div class="form">
        <div class="inputfield">
           <label>Name</label>
@@ -286,7 +287,7 @@
        </div>  
       <div class="inputfield">
           <label>Message</label>
-          <input type="text" name="city" class="input" style="height:120px">
+          <input type="text" name="message" class="input" style="height:120px">
        </div> 
 
     
