--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
            *{margin:0; padding:0; list-style:none; text-decoration:none; font-family: sans-serif; box-sizing: border-box;}
                                             /*Navigation Bar*/
            nav{height:60px; background:white;}
-           nav img{width:160px; position:absolute; top:3px; left:2%;}
+           nav img{width:160px; position:absolute; top:6px; left:2%;}
            nav ul{float:right; margin-right:5px;}
-           nav ul li{display:inline-block; line-height: 45px; margin:0 15px;}
-           nav ul li a{position:relative; color:black; font-size:20px;  padding:5px 0; font-weight:bold; font-family: 'Rajdhani', sans-serif;}
+           nav ul li{display:inline-block; line-height: 55px; margin:0 15px;}
+           nav ul li a{position:relative; color:black; font-size:20px; padding:5px 0; font-weight:bold;}
            nav ul li a.active,
            nav ul li a:hover{color:#fc354c;}
            label #btn,
