--- a/contact.html
+++ b/contact.html
@@ -245,10 +245,10 @@
            </label>
            <img src="assets/logo 2.png" alt="logo">
            <ul>
-           <li><a href="#">Home</a></li>
-           <li><a href="#">Enroll</a></li>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="enroll.html">Enroll</a></li>
 
-           <li><a href="#"  class="active">Contact</a></li>
+           <li><a href="contact.html"  class="active">Contact</a></li>
            </ul>
        </nav> 
 </Header> 
