--- a/enroll.html
+++ b/enroll.html
@@ -15,7 +15,7 @@
                                       /*Navigation Bar*/
            nav{height:60px; background:	#FAF9F6;}
            nav img{width:160px; position:absolute; top:6px; left:2%;}
-           nav ul{float:right; margin-right:25px;}
+           nav ul{float:right; margin-right:5px;}
            nav ul li{display:inline-block; line-height: 55px; margin:0 15px;}
            nav ul li a{position:relative; color:black; font-size:20px; padding:5px 0; font-weight:bold;}
            ul li a.active,
@@ -245,10 +245,10 @@
            </label>
            <img src="assets/logo 2.png" alt="logo">
            <ul>
-           <li><a href="#">Home</a></li>
-           <li><a href="#" class="active">Enroll</a></li>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="enroll.html" class="active">Enroll</a></li>
 
-           <li><a href="#">Contact</a></li>
+           <li><a href="contact.html">Contact</a></li>
            </ul>
        </nav> 
 </Header> 
