--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ margin:0 20px;
   <div class="tcontainer">
      
      <img src="assets/profile.png" alt="Avatar" style="width:70px">
-    <p style="font-family: 'Syne Mono', monospace"><span>Adnaan Shaikh</span>(Student)</p>
+    <p style="font-family: 'Syne Mono', monospace"><span>Adnan Shaikh</span>(Student)</p>
     <p style="font-family: 'Barlow Condensed', sans-serif;">Sahil Trading helped me to make money from the Share Market and Mutual Funds.This  is totally value for money.</p>
   </div>
   <br><br>
