--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ margin:0 20px;
                       Develop Trading Psychology & Discipline, Proper use of charting tools & Indicators.
                 
                    </p>
-                   <a href="#" class="hero-btn" style="font-family: 'Syne Mono', monospace">Enroll Now.</a>
+                   <a href="enroll.html" class="hero-btn" style="font-family: 'Syne Mono', monospace">Enroll Now.</a>
 
     </div>
 </div>
@@ -420,7 +420,7 @@ margin:0 20px;
 <br>
 <center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/instagram.png" alt="instagram-logo" style="width:180px"></a></center>
 <br>
-<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:175px; margin-right:10px; margin-top:10px"></a></center>
+<center><a href="https://www.youtube.com/@thetradebull2995" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:175px; margin-right:10px; margin-top:10px"></a></center>
 <br><br>
 <center><a href="contact.html"><button style="width:230px; border-radius:10px;"><h2 style="  font-family: 'Syne Mono', monospace"><i class="fa-regular fa-envelope"></i> Write Us Email</h2></button></a></center>
 <br><br><br>
