--- a/enroll.html
+++ b/enroll.html
@@ -262,7 +262,7 @@
 
 <div class="wrapper">
     <div class="title">
-      Enroll For Course
+      Enroll For Trading
     </div>
     <form action="https://formspree.io/f/xvoydene"
     method="POST">
