--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <link rel="stylesheet" href="assets/fontawesome/css/all.css">
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
      <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
      <title>Sahil Trading</title>
      <style>
            *{margin:0; padding:0; list-style:none; text-decoration:none; font-family: sans-serif; box-sizing: border-box;}
