--- a/index.html
+++ b/index.html
@@ -423,7 +423,9 @@ margin:0 20px;
 <br>
 <center><a href="https://www.youtube.com/@thetradebull2995" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:175px; margin-right:10px; margin-top:10px"></a></center>
 <br><br>
-<center><a href="contact.html"><button style="width:230px; border-radius:10px;"><h2 style="  font-family: 'Syne Mono', monospace"><i class="fa-regular fa-envelope"></i> Write Us Email</h2></button></a></center>
+<center><a href="contact.html"><button style="width:230px; height:50px; border-radius:10px;  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  "><h2 style="  font-family: 'Syne Mono', monospace"><i class="fa-regular fa-envelope"></i> Write Us Email</h2></button></a></center>
 <br><br><br>
 
 
