--- a/index.html
+++ b/index.html
@@ -209,6 +209,17 @@ margin:0 20px;
 
 
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZLS9TPLYF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KZLS9TPLYF');
+</script>
+
 </Head>
 
 
