--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ margin:0 20px;
            <img src="assets/logo 2.png" alt="logo">
            <ul>
            <li><a href="#" class="active">Home</a></li>
-           <li><a href="#" class="active">MoneyBlogs</a></li>
+           <li><a href="#" >MoneyBlogs</a></li>
         
            <li><a href="enroll.html">Enroll</a></li>
            <li><a href="contact.html">Contact</a></li>
