--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ margin:0 20px;
 <center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/wa.png" alt="whatsapp-logo" style="width:190px"></a></center>
 
 <br>
-<center><a href="https://wa.me/918766071143" target="_blank"><img src="assets/instagram.png" alt="instagram-logo" style="width:180px"></a></center>
+<center><a href="https://www.instagram.com/official_trade_bull01/?next=%2F" target="_blank"><img src="assets/instagram.png" alt="instagram-logo" style="width:180px"></a></center>
 <br>
 <center><a href="https://www.youtube.com/@thetradebull2995" target="_blank"><img src="assets/ytlogo.png" alt="youtube-logo" style="width:175px; margin-right:10px; margin-top:10px"></a></center>
 <br><br>
