--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@ margin:0 20px;
            <ul>
            <li><a href="#" class="active">Home</a></li>
            <li><a href="#" >Blogs</a></li>
-        
+           <li><a href="#">SIP Calculator</a></li>
            <li><a href="enroll.html">Enroll</a></li>
            <li><a href="contact.html">Contact</a></li>
            </ul>
        </nav> 
 </Header> 
-
+ 
 
 
 
@@ -441,6 +441,29 @@ margin:0 20px;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="footer" style="width:100%;  background: linear-gradient(to right, #141e30, #243b55); height:130px;">
     <footer>
         <br>
@@ -452,6 +475,13 @@ margin:0 20px;
 <div style="width:100%; height:4px; background:orange;"></div>
 <div style="width:100%; height:4px; background:blue;"></div>
 <div style="width:100%; height:4px; background:green;"></div>
+
+
+
+
+
+
+
 
 
 
