--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ margin:0 20px;
            <ul>
            <li><a href="#" class="active">Home</a></li>
            <li><a href="#" >Blogs</a></li>
-           <li><a href="#">SIP Calculator</a></li>
+           <li><a href="sip calculator.html">SIP Calculator</a></li>
            <li><a href="enroll.html">Enroll</a></li>
            <li><a href="contact.html">Contact</a></li>
            </ul>
