--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
            .content-section .social i{color:#a52a2a;font-size:30px; padding:0px 10px;}
            .content-section .social i:hover{color:#3d3d3d;}
            @media screen and (max-width: 768px){
-	                                             .course-container{width:80%; display:block; margin:auto; padding-top:50px;}
+	                                       .course-container{width:80%; display:block; margin:auto; padding-top:50px;}
                                                .content-section{float:none; width:100%; display:block; margin:auto;}
                                                .image-section{float:none; width:100%;}
                                                .image-section img{width:100%; height:auto; display:block; margin:auto;}
@@ -72,57 +72,20 @@
            .firstdiv2 h1{font-size:62px;}
            .firstdiv2 p{margin:10px 0 40px; font-size:17px; color:#fff; }
            .hero-btn{display:inline-block; text-decoration: none; color:#fff; border:1px solid #fff; padding:12px 34px; font-size:16px; background:transparent; position:relative; cursor: pointer;}
-                                                /*services*/
+                                                       /*services*/
            .services{text-align:center; font-family:'Roboto', sans-serif; background:#1c2135;}
            .services h1{display:inline-block; text-transform:uppercase; border-bottom:4px solid #3498db; font-size:20px; padding-bottom:10px; margin-top:60px; color:white;}
-           .cen{
-max-width: 1200px;
-margin: auto;
-overflow: hidden;
-padding: 20px;
-}
-.service{
-display: inline-block;
-width: calc(100% / 3);
-margin: 0 -2px;
-padding: 20px;
-box-sizing: border-box;
-cursor: pointer;
-transition: 0.4s;
-  font-family: 'Roboto', sans-serif;
-}
-
-.service i{
-color: white;
-font-size: 34px;
-margin-bottom: 30px;
-}
-.service h2{
-font-size: 18px;
-text-transform: uppercase;
-font-weight: 500;
-color:white;
-margin: 0;
-}
-.service p{
-
-font-size: 15px;
-font-weight: bold;
-color:white;
-
-}
-@media screen and (max-width: 800px) {
-.service{
-  width: 50%;
-
-}
-}
-@media screen and (max-width: 500px) {
-.service{
-  width: 100%;
-
-}
-}
+           .cen{max-width: 1200px; margin:auto; overflow:hidden; padding:20px;}
+           .service{display:inline-block; width:calc(100% / 3); margin:0 -2px; padding:20px; box-sizing:border-box; cursor:pointer; transition:0.4s; font-family:'Roboto', sans-serif;}
+           .service i{color:white; font-size:34px; margin-bottom:30px;}
+           .service h2{font-size:18px; text-transform:uppercase; font-weight:500; color:white; margin:0;}
+           .service p{font-size:15px; font-weight:bold; color:white;}
+           @media screen and (max-width: 800px){
+                                               .service{width:50%;}
+	   }
+           @media screen and (max-width: 500px){
+                                               .service{width:100%;}
+           }
 
 
 
